--- a/web-data-vizz/.env
+++ b/web-data-vizz/.env
@@ -7,6 +7,12 @@ DB_USER='root'
 DB_PASSWORD='@Ffelipe.1506'
 DB_PORT=3306
 
+#DB_HOST='localhost'
+#DB_DATABASE='violinStudy'
+#DB_USER='root'
+#DB_PASSWORD='SPTech#2024'
+#DB_PORT=3307
+
 # Configurações do servidor de aplicação
 APP_PORT=8080
 APP_HOST=localhost
