--- a/web-data-vizz/.env
+++ b/web-data-vizz/.env
@@ -1,17 +1,17 @@
 AMBIENTE_PROCESSO=producao
 
 # Configurações de conexão com o banco de dados
-DB_HOST='localhost'
-DB_DATABASE='violinStudy'
-DB_USER='root'
-DB_PASSWORD='@Ffelipe.1506'
-DB_PORT=3306
-
 #DB_HOST='localhost'
 #DB_DATABASE='violinStudy'
 #DB_USER='root'
-#DB_PASSWORD='SPTech#2024'
-#DB_PORT=3307
+#DB_PASSWORD='@Ffelipe.1506'
+#DB_PORT=3306
+
+DB_HOST='localhost'
+DB_DATABASE='violinStudy'
+DB_USER='webdataviz'
+DB_PASSWORD='Sptech#2025'
+DB_PORT=3307
 
 # Configurações do servidor de aplicação
 APP_PORT=8080
