--- a/web-data-viz/.env
+++ b/web-data-viz/.env
@@ -4,8 +4,8 @@ AMBIENTE_PROCESSO=producao
 #DB_HOST='localhost'
 #DB_DATABASE='violinStudy'
 #DB_USER='root'
-#DB_PASSWORD='@Ffelipe.1506'
-#DB_PORT=3306
+#DB_PASSWORD='SPTech#2024'
+#DB_PORT=3307
 
 DB_HOST='localhost'
 DB_DATABASE='violinStudy'
